WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281644
REGRESSION: storage.onChanged returns undefined as the areaName
https://bugs.webkit.org/show_bug.cgi?id=281644
Summary
REGRESSION: storage.onChanged returns undefined as the areaName
Brian Birtles
Reported
2024-10-16 20:24:19 PDT
Currently with Safari 18.0.1, if I make a change to browser.storage.sync or browser.storage.local (e.g. calling set() or remove()) then the browser.storage.onChanged listener is called with an "areaName" parameter of `undefined`. This used to work in the recent past so I suppose something regressed it recently.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-16 20:24:30 PDT
<
rdar://problem/138086765
>
Timothy Hatcher
Comment 2
2024-10-19 12:19:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35493
EWS
Comment 3
2024-10-21 09:57:32 PDT
Committed
285510@main
(637b693b65db): <
https://commits.webkit.org/285510@main
> Reviewed commits have been landed. Closing PR #35493 and removing active labels.
EWS
Comment 4
2024-10-21 17:56:14 PDT
Committed
283286.333@safari-7620-branch
(bdb757ee6dd3): <
https://commits.webkit.org/283286.333@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2089 and removing active labels.
Brent Fulgham
Comment 5
2025-05-21 14:33:49 PDT
***
Bug 290336
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug