REGRESSION: storage.onChanged returns undefined as the areaName. https://webkit.org/b/281644 rdar://problem/138086765

Reviewed by Brian Weinstein.

Add `areaName` to the arguments for `onChanged` and simplify the processing of `changes`.
Also added tests for `changes` and `areaName` that were missing.

* Source/WebKit/UIProcess/Extensions/Cocoa/API/WebExtensionContextAPIStorageCocoa.mm:
(WebKit::WebExtensionContext::fireStorageChangedEventIfNeeded): Simplified.
* Source/WebKit/WebProcess/Extensions/API/Cocoa/WebExtensionAPIStorageCocoa.mm:
(WebKit::WebExtensionContextProxy::dispatchStorageChangedEvent): Added `areaName`.
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebExtensionAPIStorage.mm:
(TestWebKitAPI::TEST(WKWebExtensionAPIStorage, StorageOnChanged)): Expanded test.
(TestWebKitAPI::TEST(WKWebExtensionAPIStorage, StorageAreaOnChanged)): Ditto.

Canonical link: https://commits.webkit.org/285510@main